Add orm schema
